==> solokeys/solo1/targets/nrf52840/crypto.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "util.h"
#include "crypto.h"
#include "sha256.h"
#include "uECC.h"
#include "aes.h"
#include "ctap.h"
#include "ssi_pal_types.h"
#include "ssi_pal_mem.h"
#include "sns_silib.h"
#include "crys_ecpki_build.h"
#include "crys_ecpki_ecdsa.h"
#include "crys_ecpki_dh.h"
#include "crys_ecpki_kg.h"
#include "crys_ecpki_domain.h"
#include "crys_rnd.h"
#include "nrf52840.h"

void crypto_sha256_init()
{
    /*sha256_init(&sha256_ctx);*/
    int ret = CRYS_HASH_Init(&sha256_ctx, CRYS_HASH_SHA256_mode);
    if (ret != CRYS_OK )
    {
        printf("sha init fail\n");
        exit(1);
    }
}

void crypto_sha256_update(uint8_t * data, size_t len)
{
    /*sha256_update(&sha256_ctx, data, len);*/
    int ret = CRYS_HASH_Update(&sha256_ctx, data, len);
    if (ret != CRYS_OK )
    {
        printf("sha update fail\n");
        exit(1);
    }

}

void crypto_sha256_update_secret()
{
    /*sha256_update(&sha256_ctx, master_secret, 32);*/
    int ret = CRYS_HASH_Update(&sha256_ctx, master_secret, 32);
    if (ret != CRYS_OK )
    {
        printf("sha update secret fail\n");
        exit(1);
    }
}

void crypto_sha256_final(uint8_t * hash)
{
    /*sha256_final(&sha256_ctx, hash);*/
    int ret = CRYS_HASH_Finish(&sha256_ctx, (uint32_t*)hash);
    if (ret != CRYS_OK )
    {
        printf("sha finish fail\n");
        exit(1);
    }


}

void crypto_ecc256_init()
{
    int ret;
    NVIC_EnableIRQ(CRYPTOCELL_IRQn);
    NRF_CRYPTOCELL->ENABLE = 1;

    ret = SaSi_LibInit();
    if (ret != SA_SILIB_RET_OK) {
        printf("Failed SaSi_LibInit - ret = 0x%x\n", ret);
        exit(1);
    }

    memset(&rndState_ptr, 0, sizeof(CRYS_RND_State_t));
    memset(&rndWorkBuff_ptr, 0, sizeof(CRYS_RND_WorkBuff_t));


    ret = CRYS_RndInit(&rndState_ptr, &rndWorkBuff_ptr);
    if (ret != SA_SILIB_RET_OK) {
        printf("Failed CRYS_RndInit - ret = 0x%x\n", ret);
        exit(1);
    }

    _es256_curve = CRYS_ECPKI_GetEcDomain(CRYS_ECPKI_DomainID_secp256r1);

    //
    uECC_set_rng((uECC_RNG_Function)ctap_generate_rng);
    //
}

void crypto_ecc256_sign(uint8_t * data, int len, uint8_t * sig)
{
    CRYS_ECPKI_UserPrivKey_t UserPrivKey;
    CRYS_ECDSA_SignUserContext_t    SignUserContext;
    uint32_t sigsz = 64;
    int ret = CRYS_ECPKI_BuildPrivKey(_es256_curve,
                    _signing_key,
                    32,
                    &UserPrivKey);

    if (ret != SA_SILIB_RET_OK){
        printf(" CRYS_ECPKI_BuildPrivKey failed with 0x%x \n",ret);
        exit(1);
    }

    ret = CRYS_ECDSA_Sign(&rndState_ptr,
            CRYS_RND_GenerateVector,
            &SignUserContext,
            &UserPrivKey,
            CRYS_ECPKI_AFTER_HASH_SHA256_mode,
            data,
            len,
            sig,
            &sigsz);

    if (ret != SA_SILIB_RET_OK){
        printf(" CRYS_ECDSA_Sign failed with 0x%x \n",ret);
        exit(1);
    }
}

void crypto_ecc256_make_key_pair(uint8_t * pubkey, uint8_t * privkey)
{
    CRYS_ECPKI_UserPrivKey_t nrfpriv;
    CRYS_ECPKI_UserPublKey_t nrfpub;
    CRYS_ECPKI_KG_TempData_t tmp;
    uint8_t pubkey1[65];
    int ret;
    uint32_t sz;

    ret = CRYS_ECPKI_GenKeyPair(&rndState_ptr,
            CRYS_RND_GenerateVector,
            _es256_curve,
            &nrfpriv, &nrfpub, &tmp, NULL);

    if (ret != SA_SILIB_RET_OK){
        printf(" gen key failed with 0x%x \n",ret);
        exit(1);
    }

    sz = 32;
    CRYS_ECPKI_ExportPrivKey(&nrfpriv, privkey, &sz);
    sz = 65;
    CRYS_ECPKI_ExportPublKey(&nrfpub,CRYS_EC_PointUncompressed, pubkey1, &sz);
    memmove(pubkey, pubkey1+1, 64);

}
