==> solokeys/solo1/targets/efm32/src/crypto.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "em_adc.h"
#include "util.h"
#include "crypto.h"
#include "device.h"
#include "sha256.h"
#include "uECC.h"
#include "aes.h"
#include "ctap.h"
#include "log.h"
#include MBEDTLS_CONFIG_FILE
#include "sha256_alt.h"
#include "mbedtls/ctr_drbg.h"
#include "mbedtls/ecdsa.h"

void crypto_sha256_init()
{
	mbedtls_sha256_init( &embed_sha256_ctx );
	mbedtls_sha256_starts(&embed_sha256_ctx,0);
//    sha256_init(&sha256_ctx);
}

void crypto_sha256_update(uint8_t * data, size_t len)
{
	mbedtls_sha256_update(&embed_sha256_ctx,data,len);
//    sha256_update(&sha256_ctx, data, len);
}

void crypto_sha256_update_secret()
{
	mbedtls_sha256_update(&embed_sha256_ctx,master_secret,32);
//    sha256_update(&sha256_ctx, master_secret, 32);
}

void crypto_sha256_final(uint8_t * hash)
{
	mbedtls_sha256_finish( &embed_sha256_ctx, hash );
//    sha256_final(&sha256_ctx, hash);
}

void crypto_ecc256_init()
{
    uECC_set_rng((uECC_RNG_Function)ctap_generate_rng);
    _es256_curve = uECC_secp256r1();
    mbedtls_ctr_drbg_init(&ctr_drbg);

    if ( mbedtls_ctr_drbg_seed(&ctr_drbg, adc_entropy_func, NULL,
    		master_secret,32 ) != 0 ) {
      printf2(TAG_ERR, "mbedtls_ctr_drbg_seed failed\n");
      exit(1);
    }

}

void crypto_ecc256_sign(uint8_t * data, int len, uint8_t * sig)
{
    mbedtls_ecp_group grp;      /*!<  Elliptic curve and base point     */
    mbedtls_mpi d;              /*!<  our secret value                  */
//#define CRYPTO_ENABLE CMU->HFBUSCLKEN0 |= CMU_HFBUSCLKEN0_CRYPTO; \
//  CRYPTO->IFC = _CRYPTO_IFC_MASK; \
//  CRYPTO->CMD = CRYPTO_CMD_SEQSTOP; \
//  CRYPTO->CTRL = CRYPTO_CTRL_DMA0RSEL_DDATA0; \
//  CRYPTO->SEQCTRL = 0; \
//  CRYPTO->SEQCTRLB = 0
//
//#define CRYPTO_DISABLE \
//  CRYPTO->IEN = 0; \
//  CMU->HFBUSCLKEN0 &= ~CMU_HFBUSCLKEN0_CRYPTO;
//  CRYPTO_DISABLE;
//	CRYPTO_ENABLE;
//    mbedtls_ecp_group_init( &grp );
//    mbedtls_mpi_init( &d );
//	mbedtls_ecp_group_load(&grp, MBEDTLS_ECP_DP_SECP256R1);
//	mbedtls_mpi_read_binary(&d, _signing_key, 32);
//
//	mbedtls_mpi r,s;
//	mbedtls_mpi_init(&r);
//	mbedtls_mpi_init(&s);
//
//	printf("signing..\n");
//	dump_hex(data,len);
//	mbedtls_ecdsa_sign_det( &grp, &r, &s, &d,
//	                             data, 32, MBEDTLS_MD_SHA256 );// Issue: this will freeze on 13th iteration..
//	printf("signed\n");
//
//	mbedtls_mpi_write_binary(&r,sig,32);
//	mbedtls_mpi_write_binary(&s,sig+32,32);

    if ( uECC_sign(_signing_key, data, len, sig, _es256_curve) == 0)
    {
        printf2(TAG_ERR,"error, uECC failed\n");
        exit(1);
    }

}

void crypto_ecc256_make_key_pair(uint8_t * pubkey, uint8_t * privkey)
{
    if (uECC_make_key(pubkey, privkey, _es256_curve) != 1)
    {
        printf2(TAG_ERR,"Error, uECC_make_key failed\n");
        exit(1);
    }
}
